[package]
name = "tonic-openssl"
version = "0.2.1"
authors = ["Lucio Franco <luciofranco14@gmail.com>"]
edition = "2018"
license = "MIT"
documentation = "https://docs.rs/tonic-openssl/0.2.0/tonic_openssl"
repository = "https://github.com/LucioFranco/tonic-openssl"
description = "A OpenSSL wrapper for tonic."
categories = ["web-programming", "network-programming"]
keywords = ["gRPC", "tls", "openssl"]
readme = "README.md"

[workspace]
members = [".", "example"]

[dependencies]
tokio = "1"
tonic = { version = "0.11", features = [
    "transport",
    "channel",
    "codegen",
    "tls",
    "tls-roots",
    "tls-webpki-roots",
    "prost",
    "gzip",
] }
async-stream = "0.3"
tokio-openssl = "0.6"
openssl = "0.10"
futures = { version = "0.3", default-features = false }
